fix microphone button dark mode color

--- a/css/styles.css
+++ b/css/styles.css
@@ -492,7 +492,6 @@ p {
 
 /* Icon color */
 #microphone-btn i {
-    color: white;
     z-index: 1;
 }
 
